--- a/index.html
+++ b/index.html
@@ -29,10 +29,8 @@
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:guangxuanxuscu@gmail.com">Email</a> &nbsp;/&nbsp;
-                  <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp;~
-                  
-                  <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp;/&nbsp;
-                  
+                  <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp;
+                  <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp;/&nbsp;             
                   <a href="https://github.com/jonbarron/">Github</a>
                 </p>
               </td>
