--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:guangxuanxuscu@gmail.com">Email</a> &nbsp;/&nbsp;
-                  <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp;
-                  <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp;/&nbsp;             
-                  <a href="https://github.com/jonbarron/">Github</a>
+                  <a href="data/Guangxuan_Xu_CV_2023_08_02.pdf">CV</a> &nbsp;/&nbsp;
+                  <a href="https://www.zhihu.com/people/dying-dawn/posts">Blog</a> &nbsp;/&nbsp;     
+                  <a href="https://www.youtube.com/channel/UC8IyW9znhZ7xLc1peA3O6hA">Youtube</a> &nbsp;/&nbsp;          
+                  <a href="https://github.com/adamtristan/">Github</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
