four_legged cover page

--- a/index.html
+++ b/index.html
@@ -74,26 +74,22 @@
           </script>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="http://jonbarron.info/zipnerf">
-            <span class="papertitle">Zip-NeRF: Anti-Aliased Grid-Based Neural Radiance Fields</span>
+          <a href="http://guangxuanxu.github.io/four_legged">
+            <span class="papertitle">Pangolin-dogs: Two quadruped robots doing multiple tasks</span>
           </a>
           <br>
-          <strong>Jonathan T. Barron</strong>,
-          <a href="https://bmild.github.io/">Ben Mildenhall</a>,
-          <a href="https://scholar.harvard.edu/dorverbin/home">Dor Verbin</a>,
-          <a href="https://pratulsrinivasan.github.io/">Pratul Srinivasan</a>,
-          <a href="https://phogzone.com/">Peter Hedman</a>
+          <strong>Guangxuan Xu</strong>
+          <a href="https://space.bilibili.com/1242339866/video"> and thanks for everyone in pangolin-SCU</a>
           <br>
-          <em>ICCV</em>, 2023
+          <em>Robocon</em>, 2023
           <br>
-          <a href="http://jonbarron.info/zipnerf">project page</a>
+          <a href="http://guangxuanxu.github.io/four_legged">project page</a>
           /
-          <a href="https://www.youtube.com/watch?v=xrrhynRzC8k">video</a>
-          /
-          <a href="https://arxiv.org/abs/2304.06706">arXiv</a>
+          <a href="https://www.youtube.com">video</a>
           <p></p>
           <p>
-          Combining mip-NeRF 360 and grid-based models like Instant NGP lets us reduce error rates by 8%&ndash;77% and accelerate training by 24x.
+            ·	Participated in image recognition and object detection based on RealSense and YOLO, as well as lidar and IMU fusion mapping tasks.
+            ·	Designed leg mechanical structures, circuits and simulated gaits for two quadruped robots with 8 and 12 DOF.
           </p>
         </td>
       </tr>
