verify four_legged cover

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
           </a>
           <br>
           <strong>Guangxuan Xu</strong>
-          <a href="https://space.bilibili.com/1242339866/video"> and thanks for everyone in pangolin-SCU</a>
+           and thanks for
+          <a href="https://space.bilibili.com/1242339866/video"> everyone in pangolin-SCU</a>
           <br>
           <em>Robocon</em>, 2023
           <br>
@@ -88,8 +89,7 @@
           <a href="https://www.youtube.com">video</a>
           <p></p>
           <p>
-            ·	Participated in image recognition and object detection based on RealSense and YOLO, as well as lidar and IMU fusion mapping tasks.
-            ·	Designed leg mechanical structures, circuits and simulated gaits for two quadruped robots with 8 and 12 DOF.
+          Participated in image recognition and object detection based on RealSense and YOLO, as well as lidar and IMU fusion mapping tasks and designed leg mechanical structures, circuits and simulated gaits for two quadruped robots with 8 and 12 DOF.
           </p>
         </td>
       </tr>
