verify four_legged cover2

--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
             <span class="papertitle">Pangolin-dogs: Two quadruped robots doing multiple tasks</span>
           </a>
           <br>
-          <strong>Guangxuan Xu</strong>
-           and thanks for
+          <strong>Guangxuan Xu and thanks for</strong>
           <a href="https://space.bilibili.com/1242339866/video"> everyone in pangolin-SCU</a>
           <br>
           <em>Robocon</em>, 2023
