--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
           <a href="http://guangxuanxu.github.io/four_legged">
-            <span class="papertitle">Pangolin-dogs: Two quadruped robots doing multiple tasks</span>
+            <span class="papertitle">Pangolin-dogs: Two quadruped robots doing multiple tasks (National first prize)</span>
           </a>
           <br>
           <strong>Guangxuan Xu and thanks for</strong>
@@ -85,7 +85,7 @@
           <br>
           <a href="http://guangxuanxu.github.io/four_legged">project page</a>
           /
-          <a href="https://www.youtube.com">video</a>
+          <a href="https://www.youtube.com">code and hardware design</a>
           <p></p>
           <p>
           Participated in image recognition and object detection based on RealSense and YOLO, as well as lidar and IMU fusion mapping tasks and designed leg mechanical structures, circuits and simulated gaits for two quadruped robots with 8 and 12 DOF.
