--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
           <br>
           <a href="http://guangxuanxu.github.io/four_legged">project page</a>
           /
-          <a href="https://www.youtube.com">code and hardware design</a>
+          <a href="https://github.com/AdamTristan/pangolin_SCU/tree/master">code and hardware design</a>
           <p></p>
           <p>
-          Participated in image recognition and object detection based on RealSense and YOLO, as well as lidar and IMU fusion mapping tasks and designed leg mechanical structures, circuits and simulated gaits for two quadruped robots with 8 and 12 DOF.
+          Participated in image recognition and object detection based on RealSense and YOLOV5, as well as lidar and IMU fusion mapping tasks and designed leg mechanical structures, circuits and simulated gaits for two quadruped robots with 8 and 12 DOF.
           </p>
         </td>
       </tr>
