--- a/index.html
+++ b/index.html
@@ -3518,7 +3518,7 @@ for Topologically Varying Neural Radiance Fields</span>
               <td style="padding:0px">
                 <br>
                 <p style="text-align:right;font-size:small;">
-                  Feel free to steal this website's <a href="https://github.com/jonbarron/jonbarron_website">source code</a>. <strong>Do not</strong> scrape the HTML from this page itself, as it includes analytics tags that you do not want on your own website &mdash; use the github code instead. Also, consider using <a href="https://leonidk.com/">Leonid Keselman</a>'s <a href="https://github.com/leonidk/new_website">Jekyll fork</a> of this page.
+                  Thanks to <a href="https://jonbarron.info/">J. Barron's amazing template</a>, I did my website beautifully. <strong>And in case I don't see you, Good morning, good afternoon, good evening, and good night!</strong>
                 </p>
               </td>
             </tr>
