--- a/index.html
+++ b/index.html
@@ -3501,13 +3501,12 @@ for Topologically Varying Neural Radiance Fields</span>
                 <h2>Basically <br> Blog Posts</h2>
               </td>
               <td width="75%" valign="middle">
-                <a href="https://arxiv.org/abs/2112.11687">Squareplus: A Softplus-Like Algebraic Rectifier</a>
+                <a href="https://arxiv.org/abs/2112.11687">Yesterday never more (My first unpubilished university memoir, chinese version only)</a>
                 <br>
-                <a href="https://arxiv.org/abs/2010.09714">A Convenient Generalization of Schlick's Bias and Gain Functions</a>
+                <a href="https://arxiv.org/abs/2010.09714">Daydream Anthology (My first unpubilished poem anthology, chinese version only)</a>
                 <br>
-                <a href="https://arxiv.org/abs/1704.07483">Continuously Differentiable Exponential Linear Units</a>
-                <br>
-                <a href="https://jonbarron.info/data/cvpr2023_llm_workshop_annotated.pdf">Scholars & Big Models: How Can Academics Adapt?</a>
+                <a href="https://www.zhihu.com/people/dying-dawn/posts">For more technical blogs, click here.</a>
+
               </td>
             </tr>
             
