--- a/index.html
+++ b/index.html
@@ -3517,7 +3517,7 @@ for Topologically Varying Neural Radiance Fields</span>
               <td style="padding:0px">
                 <br>
                 <p style="text-align:right;font-size:small;">
-                  Thanks to <a href="https://jonbarron.info/">J. Barron's amazing template</a>, I did my website beautifully. <strong>And in case I don't see you, Good morning, good afternoon, good evening, and good night!</strong>
+                  Thanks to <a href="https://jonbarron.info/">J. Barron's amazing template</a>, I did my website beautifully. <strong>And in case I don't see you, Good morning, and good night!</strong>
                 </p>
               </td>
             </tr>
