--- a/index.html
+++ b/index.html
@@ -120,13 +120,12 @@
           </a>
           <br>
           
-  <a href="https://amitraj93.github.io/">Amit Raj</a>, <a href="https://www.linkedin.com/in/srinivas-kaza-64223b74">Srinivas Kaza</a>, <a href="https://poolio.github.io/">Ben Poole</a>, <a href="https://m-niemeyer.github.io/">Michael Niemeyer</a>, <a href="https://natanielruiz.github.io/">Nataniel Ruiz</a>, 
-  <a href="https://bmild.github.io/">Ben Mildenhall</a>, <a href="https://scholar.google.com/citations?user=I2qheksAAAAJ">Shiran Zada</a>, <a href="https://kfiraberman.github.io/">Kfir Aberman</a>, <a href="http://people.csail.mit.edu/mrub/">Michael Rubinstein</a>, 
-          <strong>Jonathan T. Barron</strong>, <a href="http://people.csail.mit.edu/yzli/">Yuanzhen Li</a>, <a href="https://varunjampani.github.io/">Varun Jampani</a>
+   
+          <strong>Guangxuan Xu</strong>, Libo Zhang, <a href="https://scholar.google.com/citations?user=t3aaMMgAAAAJ&hl=en">Xiaodong Wu</a>
           <br>
-          <em>ICCV</em>, 2023
+          <em>arXiv</em>, 2023
           <br>
-          <a href="https://dreambooth3d.github.io/">project page</a> / 
+          <a href="https://dreambooth3d.github.io/">code and mechanical design</a> / 
           <a href="https://arxiv.org/abs/2303.13508">arXiv</a>
           <p></p>
           <p>Combining DreamBooth (personalized text-to-image) and DreamFusion (text-to-3D) yields high-quality, subject-specific 3D assets with text-driven modifications</p>
