--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <a href="https://dreambooth3d.github.io/">code and mechanical design</a> / 
           <a href="https://arxiv.org/abs/2303.13508">arXiv</a>
           <p></p>
-          <p>We utilized 3D printing technology to create the mold for the soft robotic gripper, integrated custom-made flexible pressure and temperature sensors and used STM32 for closed-loop control and data collection through the I2C bus protocol</p>
+          <p>We utilized 3D printing technology to create the mold for the soft robotic gripper, integrated custom-made flexible pressure and temperature sensors and used STM32 for closed-loop control and data collection through the I2C bus protocol.</p>
         </td>
       </tr>
 
