--- a/index.html
+++ b/index.html
@@ -132,36 +132,35 @@
         </td>
       </tr>
 
-            <tr onmouseout="rgbd_stop()" onmouseover="rgbd_start()">
+            <tr onmouseout="mip_stop()" onmouseover="mip_start()">
               <td style="padding:20px;width:25%;vertical-align:middle">
-                <div id='rgbd_anim' class='hidden'><img src="images/SceneSIRFS.gif"></div>
-                <div id='rgbd_still'><img src="images/SceneSIRFS-still.jpg"></div>
+                <div id='mip_anim' class='hidden'><img src="images/SceneSIRFS.gif"></div>
+                <div id='mip_still'><img src="images/SceneSIRFS-still.jpg"></div>
                 <script type="text/javascript">
-                  function rgbd_start() {
-                    document.getElementById('rgbd_anim').style.display = 'inline';
-                    document.getElementById('rgbd_still').style.display = 'none';
+                  function mip_start() {
+                    document.getElementById('mip_anim').style.display = 'inline';
+                    document.getElementById('mip_still').style.display = 'none';
                   }
 
-                  function rgbd_stop() {
-                    document.getElementById('rgbd_anim').style.display = 'none';
-                    document.getElementById('rgbd_still').style.display = 'inline';
+                  function mip_stop() {
+                    document.getElementById('mip_anim').style.display = 'none';
+                    document.getElementById('mip_still').style.display = 'inline';
                   }
-                  rgbd_stop()
+                  mip_stop()
                 </script>
               </td>
               <td width="75%" valign="middle">
-                <a href="https://drive.google.com/file/d/1snypSLhzC0jXCchJRsWpcDZ7Es5hDmXo/view?usp=sharing">
-                  <span class="papertitle">Intrinsic Scene Properties from a Single RGB-D Image</span>
+                <span class="papertitle">Photoshop-like application without OpenCV with C++ and Python</span>
                 </a>
                 <br>
-                <strong>Jonathan T. Barron</strong>, <a href="http://www.cs.berkeley.edu/~malik/">Jitendra Malik</a>
+                <strong>Guangxuan Xu</strong>
                 <br>
-                <em>CVPR</em>, 2013 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
+                <em>Medical Image Processing Project</em>, 2023
                 <br>
-                <a href="https://drive.google.com/file/d/1cLUw72WpgdZ_3TQAjJABdgywqjBfn_Mq/view?usp=sharing">supplement</a> / <a href="data/BarronMalikCVPR2013.bib">bibtex</a> / <a href="http://techtalks.tv/talks/intrinsic-scene-properties-from-a-single-rgb-d-image/58614/">talk</a> / <a href="https://drive.google.com/file/d/0B4nuwEMaEsnmWW1CZGJPbi12R0k/view?usp=sharing">keynote</a> (or <a href="https://drive.google.com/file/d/19q3EFf6GIb4UFcCN2DVU2jVKpxRj5kxf/view?usp=sharing">powerpoint</a>, <a href="https://drive.google.com/file/d/0B4nuwEMaEsnmMzQ4ZVp1SWdnVkk/view?usp=sharing">PDF</a>) / <a href="https://drive.google.com/open?id=1ZbPScVA6Efqd-ESvojl92sw8K-82Xxry">code &amp; data</a>
-                <p>By embedding mixtures of shapes &amp; lights into a soft segmentation of an image, and by leveraging the output of the Kinect, we can extend SIRFS to scenes.
+                <a href="">code & doc</a> / <a href="">blog</a> 
+                <p>I utilized pointers to open .bmp files of varying bit depths and used NumPy exclusively to apply space and frequency filtering, conduct image encoding and decoding, and perform object detection.
                   <br>
-                  <br>TPAMI Journal version: <a href="https://drive.google.com/file/d/1iQiUxZvjPPnb8rFCwXYesTgFSRk7mkAq/view?usp=sharing">version</a> / <a href="data/BarronMalikTPAMI2015B.bib">bibtex</a>
+                  
                 </p>
               </td>
             </tr>
