--- a/index.html
+++ b/index.html
@@ -205,23 +205,16 @@
           <img src="images/B3DO.jpg" alt="b3do" width="160" style="border-style: none">
         </td>
         <td width="75%" valign="middle">
-          <a href="https://drive.google.com/file/d/1_S8EQyngbHQrB415o0XkQ4V9SMzdEgWT/view?usp=sharing">
-            <span class="papertitle">A Category-Level 3-D Object Dataset: Putting the Kinect to Work</span>
+          <span class="papertitle">Rope-climbing Robot Based on Anti-Trot Gait with SolidWorks & ANSYS</span>
           </a>
           <br>
-          <a href="http://www.eecs.berkeley.edu/%7Eallie/">Allison Janoch</a>,
-          <a href="http://sergeykarayev.com/">Sergey Karayev</a>,
-          <a href="http://www.eecs.berkeley.edu/%7Ejiayq/">Yangqing Jia</a>,
-          <strong>Jonathan T. Barron</strong>,
-          <a href="http://www.cs.berkeley.edu/%7Emfritz/">Mario Fritz</a>,
-          <a href="http://www.icsi.berkeley.edu/%7Esaenko/">Kate Saenko</a>,
-          <a href="http://www.eecs.berkeley.edu/%7Etrevor/">Trevor Darrell</a>
+          <strong>Guangxuan Xu</strong>,
           <br>
-          <em>ICCV 3DRR Workshop</em>, 2011
+          <em>Mechanical Design Project</em>, 2022
           <br>
-          <a href="data/B3DO_ICCV_2011.bib">bibtex</a> /
-          <a href="https://drive.google.com/file/d/1qf4-U5RhSw12O7gzQwW66SMQhs2FWYDW/view?usp=sharing">"smoothing" code</a>
-          <p>We present a large RGB-D dataset of indoor scenes and investigate ways to improve object detection using depth information.</p>
+          <a href="">Dynamics Simulation Video</a> /
+          <a href="">Design</a>
+          <p>I designed multiple versions of mechanical parts utilizing SolidWorks and conducted static analysis of the major components using ANSYS</p>
         </td>
       </tr> 
 
