--- a/index.html
+++ b/index.html
@@ -185,18 +185,17 @@
           </script>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="https://drive.google.com/file/d/17RfINbE2dr2EjXp9MtGO0MHJLQmQVhvT/view?usp=sharing">
-            <span class="papertitle">Shape, Albedo, and Illumination from a Single Image of an Unknown Object</span>
+          <span class="papertitle">Reinforcement learning classic algorithms reproduction with Python</span>
           </a>
           <br>
-          <strong>Jonathan T. Barron</strong>, <a href="http://www.cs.berkeley.edu/~malik/">Jitendra Malik</a>
+          <strong>Guangxuan Xu</strong>
           <br>
-          <em>CVPR</em>, 2012
+          <em>CenBRAIN Projecrt</em>, 2023
           <br>
-          <a href="https://drive.google.com/file/d/1Im_bUI42AP9VPoNtsjLajvtLRiwv39k3/view?usp=sharing">supplement</a> /
-          <a href="data/BarronMalikCVPR2012.bib">bibtex</a> /
-          <a href="https://drive.google.com/file/d/1IAlSF4k3_CEL9dfbaMiNTFPBoEkLhsRl/view?usp=sharing">poster</a>
-          <p>This paper is subsumed by <a href="#SIRFS">SIRFS</a>.</p>
+          <a href="https://drive.google.com/file/d/1Im_bUI42AP9VPoNtsjLajvtLRiwv39k3/view?usp=sharing">code</a> /
+          <a href="data/BarronMalikCVPR2012.bib">video</a> /
+          <a href="https://drive.google.com/file/d/1IAlSF4k3_CEL9dfbaMiNTFPBoEkLhsRl/view?usp=sharing">blog</a>
+          <p>I Used NumPy and Gym to reproduce multiple-arm bandits, markov decision procession, Sarsa, Q-learning and critical-actor algorithms</p>
         </td>
       </tr>
 
