--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             mip_stop()
           </script>
         </td>
-        <td style="padding:20px;width:75%;vertical-align:middle">
+        <td width="75%" valign="middle">
           <span class="papertitle">Photoshop-like application without OpenCV with C++ and Python</span>
           </a>
           <br>
@@ -184,7 +184,7 @@
             cvpr12_stop()
           </script>
         </td>
-        <td style="padding:20px;width:75%;vertical-align:middle">
+        <td width="75%" valign="middle">
           <span class="papertitle">Reinforcement learning classic algorithms reproduction with Python</span>
           </a>
           <br>
@@ -200,7 +200,7 @@
       </tr>
 
       <tr>
-        <td style="padding:20px;width:75%;vertical-align:middle">
+        <td style="padding:20px;width:25%;vertical-align:middle">
           <img src="images/B3DO.jpg" alt="b3do" width="160" style="border-style: none">
         </td>
         <td width="75%" valign="middle">
