--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             cvpr12_stop()
           </script>
         </td>
-        <td width="75%" valign="middle">
+        <td padding=10px width="75%" valign="middle">
           <span class="papertitle">Reinforcement learning classic algorithms reproduction with Python</span>
           </a>
           <br>
