change ps  padding

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <br>
           <strong>Guangxuan Xu</strong>
           <br>
-          <em>CenBRAIN Projecrt</em>, 2023
+          <em>CenBRAIN Project</em>, 2023
           <br>
           <a href="https://drive.google.com/file/d/1Im_bUI42AP9VPoNtsjLajvtLRiwv39k3/view?usp=sharing">code</a> /
           <a href="data/BarronMalikCVPR2012.bib">video</a> /
