change ps  padding

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             mip_stop()
           </script>
         </td>
-        <td width="75%" valign="middle">
+        <td style="padding:20px;width:75%;vertical-align:middle">
           <span class="papertitle">Photoshop-like application without OpenCV with C++ and Python</span>
           </a>
           <br>
