--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             cvpr12_stop()
           </script>
         </td>
-        <td padding=10px width="75%" valign="middle">
+        <td style="padding:20px;width:75%;vertical-align:middle">
           <span class="papertitle">Reinforcement learning classic algorithms reproduction with Python</span>
           </a>
           <br>
@@ -203,7 +203,7 @@
         <td style="padding:20px;width:25%;vertical-align:middle">
           <img src="images/B3DO.jpg" alt="b3do" width="160" style="border-style: none">
         </td>
-        <td width="75%" valign="middle">
+        <td style="padding:20px;width:75%;vertical-align:middle">
           <span class="papertitle">Rope-climbing Robot Based on Anti-Trot Gait with SolidWorks & ANSYS</span>
           </a>
           <br>
