--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           <span class="papertitle">Rope-climbing Robot Based on Anti-Trot Gait with SolidWorks & ANSYS</span>
           </a>
           <br>
-          <strong>Guangxuan Xu</strong>,
+          <strong>Guangxuan Xu</strong>
           <br>
           <em>Mechanical Design Project</em>, 2022
           <br>
