--- a/four_legged/index.html
+++ b/four_legged/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>Zip-NeRF</title>
+    <title>Pangolin-dogs</title>
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,12 +17,12 @@
     <meta property="og:image:height" content="840">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://jonbarron.info/zipnerf/"/>
-    <meta property="og:title" content="Zip-NeRF: Anti-Aliased Grid-Based Neural Radiance Fields" />
-    <meta property="og:description" content="Neural Radiance Field training can be accelerated through the use of grid-based representations in NeRF's learned mapping from spatial coordinates to colors and volumetric density. However, these grid-based approaches lack an explicit understanding of scale and therefore often introduce aliasing, usually in the form of jaggies or missing scene content. Anti-aliasing has previously been addressed by mip-NeRF 360, which reasons about sub-volumes along a cone rather than points along a ray, but this approach is not natively compatible with current grid-based techniques. We show how ideas from rendering and signal processing can be used to construct a technique that combines mip-NeRF 360 and grid-based models such as Instant NGP to yield error rates that are 8%-77% lower than either prior technique, and that trains 24x faster than mip-NeRF 360." />
+    <meta property="og:title" content="Pangolin-dogs: Two quadruped robots doing multiple tasks (National first prize)" />
+    <meta property="og:description" content=" Participated in image recognition and object detection based on RealSense and YOLO, as well as lidar and IMU fusion mapping tasks and designed leg mechanical structures, circuits and simulated gaits for two quadruped robots with 8 and 12 DOF." />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Zip-NeRF: Anti-Aliased Grid-Based Neural Radiance Fields" />
-    <meta name="twitter:description" content="Neural Radiance Field training can be accelerated through the use of grid-based representations in NeRF's learned mapping from spatial coordinates to colors and volumetric density. However, these grid-based approaches lack an explicit understanding of scale and therefore often introduce aliasing, usually in the form of jaggies or missing scene content. Anti-aliasing has previously been addressed by mip-NeRF 360, which reasons about sub-volumes along a cone rather than points along a ray, but this approach is not natively compatible with current grid-based techniques. We show how ideas from rendering and signal processing can be used to construct a technique that combines mip-NeRF 360 and grid-based models such as Instant NGP to yield error rates that are 8%-77% lower than either prior technique, and that trains 24x faster than mip-NeRF 360." />
+    <meta name="twitter:title" content="Pangolin-dogs: Two quadruped robots doing multiple tasks (National first prize)" />
+    <meta name="twitter:description" content=" Participated in image recognition and object detection based on RealSense and YOLO, as well as lidar and IMU fusion mapping tasks and designed leg mechanical structures, circuits and simulated gaits for two quadruped robots with 8 and 12 DOF." />
     <meta name="twitter:image" content="https://jonbarron.info/zipnerf/img/teaser.jpg" />
 
 
@@ -48,9 +48,9 @@
     <div class="container" id="main">
         <div class="row">
             <h2 class="col-md-12 text-center">
-                <b>Zip-NeRF</b>: Anti-Aliased Grid-Based Neural Radiance Fields</br> 
+                <b>Pangolin-dogs</b>: Two quadruped robots doing multiple tasks (National first prize)</br> 
                 <small>
-                ICCV 2023
+                Robocon 2023
                 </small>
             </h2>
         </div>
@@ -58,31 +58,17 @@
             <div class="col-md-12 text-center">
                 <ul class="list-inline">
                     <li>
-                        <a href="https://jonbarron.info/">
-                          Jonathan T. Barron
+                        <a href="https://guangxuanxu.github.io/">
+                          Guangxuan Xu
                         </a>
                     </li>
                     <li>
-                        <a href="http://bmild.github.io/">
-                            Ben Mildenhall
+                        <a href="https://space.bilibili.com/1242339866/video">
+                            Everyone in pangolin-SCU
                         </a>
                     </li>
-                    <li>
-                        <a href="http://dorverbin.github.io/">
-                          Dor Verbin
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://pratulsrinivasan.github.io/">
-                          Pratul P. Srinivasan
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://phogzone.com/">
-                          Peter Hedman
-                        </a>
-                    </li>
-                    </br>Google
+                   
+                    </br>Sichuan University
                 </ul>
             </div>
         </div>
