--- a/four_legged/index.html
+++ b/four_legged/index.html
@@ -78,15 +78,9 @@
                 <div class="col-md-4 col-md-offset-4 text-center">
                     <ul class="nav nav-pills nav-justified">
                         <li>
-                            <a href="https://arxiv.org/abs/2304.06706">
-                            <image src="img/zip_paper_image.jpg" height="60px">
-                                <h4><strong>Paper</strong></h4>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.youtube.com/watch?v=xrrhynRzC8k">
+                            <a href="https://www.bilibili.com/video/BV1nM4y1j7nT/?spm_id_from=333.999.0.0&vd_source=8863b28d80f3287a2bc09e716e5f6988">
                             <image src="img/youtube_icon.png" height="60px">
-                                <h4><strong>Video</strong></h4>
+                                <h4><strong>Video (VPN needed)</strong></h4>
                             </a>
                         </li>
                     </ul>
