--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   <a href="mailto:guangxuanxuscu@gmail.com">Email</a> &nbsp;/&nbsp;
                   <a href="data/Guangxuan_Xu_CV_2023_08_02.pdf">CV</a> &nbsp;/&nbsp;
                   <a href="https://www.zhihu.com/people/dying-dawn/posts">Blog</a> &nbsp;/&nbsp;     
-                  <a href="https://www.youtube.com/channel/UC8IyW9znhZ7xLc1peA3O6hA">Youtube</a> &nbsp;/&nbsp;          
+                  <a href="https://space.bilibili.com/497284028?spm_id_from=333.999.0.0">Youtube</a> &nbsp;/&nbsp;          
                   <a href="https://github.com/adamtristan/">Github</a>
                 </p>
               </td>
@@ -124,8 +124,8 @@
           <br>
           <em>arXiv</em>, 2023
           <br>
-          <a href="https://dreambooth3d.github.io/">code and mechanical design</a> / 
-          <a href="https://arxiv.org/abs/2303.13508">arXiv</a>
+          <a href="">code and mechanical design</a> / 
+          <a href="">working arXiv</a>
           <p></p>
           <p>We utilized 3D printing technology to create the mold for the soft robotic gripper, integrated custom-made flexible pressure and temperature sensors and used STM32 for closed-loop control and data collection through the I2C bus protocol.</p>
         </td>
