--- a/four_legged/index.html
+++ b/four_legged/index.html
@@ -80,7 +80,7 @@
                         <li>
                             <a href="https://www.bilibili.com/video/BV1nM4y1j7nT/?spm_id_from=333.999.0.0&vd_source=8863b28d80f3287a2bc09e716e5f6988">
                             <image src="img/youtube_icon.png" height="60px">
-                                <h4><strong>Video (VPN needed)</strong></h4>
+                                <h4><strong>Video</strong></h4>
                             </a>
                         </li>
                     </ul>
@@ -104,7 +104,7 @@
                     Abstract
                 </h3>
                 <p class="text-justify">
-Neural Radiance Field training can be accelerated through the use of grid-based representations in NeRF's learned mapping from spatial coordinates to colors and volumetric density. However, these grid-based approaches lack an explicit understanding of scale and therefore often introduce aliasing, usually in the form of jaggies or missing scene content. Anti-aliasing has previously been addressed by mip-NeRF 360, which reasons about sub-volumes along a cone rather than points along a ray, but this approach is not natively compatible with current grid-based techniques. We show how ideas from rendering and signal processing can be used to construct a technique that combines mip-NeRF 360 and grid-based models such as Instant NGP to yield error rates that are 8%-77% lower than either prior technique, and that trains 24x faster than mip-NeRF 360.
+                    Participated in image recognition and object detection based on RealSense and YOLO, as well as lidar and IMU fusion mapping tasks and designed leg mechanical structures, circuits and simulated gaits for two quadruped robots with 8 and 12 DOF.
                 </p>
             </div>
         </div>
@@ -193,23 +193,7 @@ Neural Radiance Field training can be accelerated through the use of grid-based 
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <h3>
-                    Citation
-                </h3>
-                <div class="form-group col-md-10 col-md-offset-1">
-                    <textarea id="bibtex" class="form-control" readonly>
-@article{barron2023zipnerf,
-    title={Zip-NeRF: Anti-Aliased Grid-Based Neural Radiance Fields},
-    author={Jonathan T. Barron and Ben Mildenhall and 
-            Dor Verbin and Pratul P. Srinivasan and Peter Hedman},
-    journal={ICCV},
-    year={2023}
-}</textarea>
-                </div>
-            </div>
-        </div>
+
 
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
@@ -217,7 +201,7 @@ Neural Radiance Field training can be accelerated through the use of grid-based 
                     Acknowledgements
                 </h3>
                 <p class="text-justify">
-                Thanks to Janne Kontkanen, Rick Szeliski, and David Salesin for their comments on the text, and to Ricardo Martin-Brualla, Keunhong Park, Ben Poole, Aleksander Hołyński, Etienne Pot, Kostas Rematas, Daniel Duckworth, Marcos Seefelder, Cardin Moffett, and Peter Zhizhin for their advice and help.
+                Thanks to Wenfei Lee, Zeyun Zhang, Tengfei Wang, Naixiao Peng, Henglin Zeng and Haizhou Ge, this project won't work smoothly without your guys.
                     <br><br>
                 The website template was borrowed from <a href="http://mgharbi.com/">Michaël Gharbi</a> and <a href="https://dorverbin.github.io/refnerf">Ref-NeRF</a>.
                 </p>
