--- a/index.html
+++ b/index.html
@@ -237,8 +237,6 @@
                 <h2>Basically <br> Blog Posts</h2>
               </td>
               <td width="75%" valign="middle">
-                <a href="https://arxiv.org/abs/2112.11687">Yesterday never more (My first unpubilished university memoir, chinese version only)</a>
-                <br>
                 <a href="https://arxiv.org/abs/2010.09714">Daydream Anthology (My first unpubilished poem anthology, chinese version only)</a>
                 <br>
                 <a href="https://www.zhihu.com/people/dying-dawn/posts">For more technical blogs, click here.</a>
@@ -253,7 +251,7 @@
               <td style="padding:0px">
                 <br>
                 <p style="text-align:right;font-size:small;">
-                  Thanks to <a href="https://jonbarron.info/">J. Barron's amazing template</a>, I did my website beautifully. <strong>And in case I don't see you, Good morning, and good night!</strong>
+                  Thanks to <a href="https://jonbarron.info/">J. Barron's amazing template</a>, I was able to create this stunning website. <strong>And in case I don't see you, Good morning, and good night!</strong>
                 </p>
               </td>
             </tr>
