--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
               <td style="padding:0px">
                 <br>
                 <p style="text-align:right;font-size:small;">
-                  Thanks to <a href="https://jonbarron.info/">J. Barron's amazing template</a>, I was able to create this stunning website. <strong>And in case I don't see you, Good morning, and good night!</strong>
+                  I want to express my thanks for <a href="https://jonbarron.info/">J. Barron's amazing template</a>. <strong>And in case I don't see you, Good morning, and good night!</strong>
                 </p>
               </td>
             </tr>
