--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
           <br>
           <em>arXiv</em>, 2023
           <br>
-          <a href="">code and mechanical design</a> / 
-          <a href="">working arXiv</a>
+          <a href="https://github.com/AdamTristan/Soft-gripper-with-flexible-thermal-and-pressure-sensor">code and mechanical design</a> / 
+          <a href="">arXiv (working on it)</a>
           <p></p>
           <p>We utilized 3D printing technology to create the mold for the soft robotic gripper, integrated custom-made flexible pressure and temperature sensors and used STM32 for closed-loop control and data collection through the I2C bus protocol.</p>
         </td>
@@ -156,7 +156,7 @@
           <br>
           <em>Medical Image Processing Project</em>, 2023
           <br>
-          <a href="">code & doc</a> / <a href="">blog</a> 
+          <a href="https://github.com/AdamTristan/digital_image_processing_without_using_library">code</a> / <a href="https://zhuanlan.zhihu.com/p/616924131">blog</a> 
           <p>I utilized pointers to open .bmp files of varying bit depths and used NumPy exclusively to apply space and frequency filtering, conduct image encoding and decoding, and perform object detection.
             <br>
             
@@ -191,9 +191,7 @@
           <br>
           <em>CenBRAIN Project</em>, 2023
           <br>
-          <a href="https://drive.google.com/file/d/1Im_bUI42AP9VPoNtsjLajvtLRiwv39k3/view?usp=sharing">code</a> /
-          <a href="data/BarronMalikCVPR2012.bib">video</a> /
-          <a href="https://drive.google.com/file/d/1IAlSF4k3_CEL9dfbaMiNTFPBoEkLhsRl/view?usp=sharing">blog</a>
+          <a href="https://github.com/AdamTristan/RL_starter/tree/master">code</a>
           <p>I Used NumPy and Gym to reproduce multiple-arm bandits, markov decision procession, Sarsa, Q-learning and critical-actor algorithms</p>
         </td>
       </tr>
