--- a/four_legged/index.html
+++ b/four_legged/index.html
@@ -117,7 +117,7 @@
                 </h3>
                 <div class="text-center">
                     <div style="position:relative;padding-top:56.25%;">
-                        <iframe src="https://youtube.com/embed/xrrhynRzC8k" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+                        <iframe src="https://www.bilibili.com/video/BV1nM4y1j7nT/?spm_id_from=333.999.0.0&vd_source=8863b28d80f3287a2bc09e716e5f6988" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
                     </div>
                 </div>
             </div>
