--- a/four_legged/index.html
+++ b/four_legged/index.html
@@ -113,7 +113,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
-                    Video
+                    Speed Contest Video
                 </h3>
                 <div class="text-center">
                     <div style="position:relative;padding-top:56.25%;">
@@ -126,11 +126,11 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
-                    360° Video Flythroughs
+                    Slalom Video
                 </h3>
                 <div class="text-center">
                     <div style="position:relative;padding-top:56.25%;">
-                        <iframe src="https://www.youtube.com/embed/videoseries?list=PLzPoYEE6Aw7Jzjek1uEIPnpcTDL3u8tb4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+                        <iframe src="https://www.bilibili.com/video/BV1Xj411o7TN/?spm_id_from=333.788&vd_source=8863b28d80f3287a2bc09e716e5f6988" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
                         <!-- <iframe src="https://youtube.com/embed/jbE2ri8xEZo" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe> -->
                     </div>
                 </div>
