--- a/four_legged/index.html
+++ b/four_legged/index.html
@@ -117,7 +117,7 @@
                 </h3>
                 <div class="text-center">
                     <div style="position:relative;padding-top:56.25%;">
-                        <iframe src="https://www.bilibili.com/video/BV1Xj411o7TN?t=0.0" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+                        <iframe src="https://www.bilibili.com/video/BV1nM4y1j7nT?t=2.8" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
                     </div>
                 </div>
             </div>
