--- a/four_legged/index.html
+++ b/four_legged/index.html
@@ -113,7 +113,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
-                    Speed Contest Video
+                    Speed Contest Video <b>(please refresh the website if the window can't display videos)</b>
                 </h3>
                 <div class="text-center">
                     <div style="position:relative;padding-top:56.25%;">
