--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:guangxuanxuscu@gmail.com">Email</a> &nbsp;/&nbsp;
-                  <a href="data/Guangxuan_Xu_CV_2023_08_02.pdf">CV</a> &nbsp;/&nbsp;
+                  <a href="data/CV_Guangxuan Xu.pdf">CV</a> &nbsp;/&nbsp;
                   <a href="https://www.zhihu.com/people/dying-dawn/posts">Blog</a> &nbsp;/&nbsp;     
                   <a href="https://space.bilibili.com/497284028?spm_id_from=333.999.0.0">Youtube</a> &nbsp;/&nbsp;          
                   <a href="https://github.com/adamtristan/">Github</a>
@@ -133,8 +133,8 @@
 
       <tr onmouseout="mip_stop()" onmouseover="mip_start()">
         <td style="padding:20px;width:25%;vertical-align:middle">
-          <div id='mip_anim' class='hidden'><img src="images/SceneSIRFS.gif"></div>
-          <div id='mip_still'><img src="images/SceneSIRFS-still.jpg"></div>
+          <div id='mip_anim' class='hidden'><img src="images/2.gif"></div>
+          <div id='mip_still'><img src="images/2.png"></div>
           <script type="text/javascript">
             function mip_start() {
               document.getElementById('mip_anim').style.display = 'inline';
