--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <tr onmouseout="mip_stop()" onmouseover="mip_start()">
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div id='mip_anim' class='hidden'><img src="images/2.gif"></div>
-          <div id='mip_still'><img src="images/2.png"></div>
+          <div id='mip_still'><img src="images/2.png" width="160" height="160"></div>
           <script type="text/javascript">
             function mip_start() {
               document.getElementById('mip_anim').style.display = 'inline';
