--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one">
             <div class="two" id='srg_image'><video  width=100% height=100% muted autoplay loop>
-            <source src="images/owl.mp4" type="video/mp4">
+            <source src="images/sr.mp4" type="video/mp4">
             Your browser does not support the video tag.
             </video></div>
-            <img src='images/owl.png' width="160">
+            <img src='images/figure2.jpg' width="160" height="160">
           </div>
           <script type="text/javascript">
             function srg_start() {
