--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one" style="height: 120px">
             <div class="two" id='cvpr12_image' style="height: 120px">
-              <img src='images/BarronCVPR2012_after.jpg' style="border-style: none">
+              <img src='images/mujuco1.png' style="border-style: none">
             </div>
-            <img src='images/BarronCVPR2012_before.jpg' style="border-style: none">
+            <img src='images/mujuco2.png' style="border-style: none">
           </div>
           <script type="text/javascript">
             function cvpr12_start() {
@@ -198,7 +198,7 @@
 
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle">
-          <img src="images/B3DO.jpg" alt="b3do" width="160" style="border-style: none">
+          <img src="images/rr.png" alt="b3do" width="160" style="border-style: none">
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
           <span class="papertitle">Rope-climbing Robot Based on Anti-Trot Gait with SolidWorks & ANSYS</span>
