--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
           <br>
           <em>Mechanical Design Project</em>, 2022
           <br>
-          <a href="">Dynamics Simulation Video</a> /
-          <a href="">Design</a>
+          <a href="images/rr_sim.mp4">Dynamics Simulation Video</a> /
+          <a href="https://github.com/AdamTristan/Rope-Climbing-Robot">Design</a>
           <p>I designed multiple versions of mechanical parts utilizing SolidWorks and conducted static analysis of the major components using ANSYS</p>
         </td>
       </tr> 
